start/pause job
